--- a/src/music/1990s.rst
+++ b/src/music/1990s.rst
@@ -15,7 +15,7 @@ TBD
 
 *Section complete*: TBD
 
-*Latest update*: 13 January 2024
+*Latest update*: 18 May 2024
 
 *Total Albums*: TBD
 
@@ -131,6 +131,150 @@ indie in many of the albums listed here.
   pack of records. [*Memory*: This was the second album I tried from this guy
   after losing my mind listening to **Promenade** repeatedly for about 5 years.
   I remember wondering why I waited so long to dig deeper.]
+
+- *Dance Hall at Louise Point* by **John Parish & PJ Harvey** - This is the
+  first record in the quieter, artier sound that would become her predominant
+  style in her more recent work. There still are some aggressive, abrasive
+  moments here, but they unfold in a creeping, pensive way that is also very
+  representative of the latter day Polly Jean. "Heela" is such a remarkable
+  song, and will always be one of my favorites. Even though we would get a few
+  more records in a more conventional rock style, this is the start of the PJ we
+  know and love today. [*Memory*: When I was working my way through her catalog
+  in the 2007 time frame, I bought a used CD copy of this for about a dollar and
+  didn't know what to make of it. This took me a while to fully appreciate, but
+  it is not one of my very favorites.]
+
+- *Traveling Without Moving* by **Jamiroquai** - It is hard to think about this
+  record without picturing that legendary video for "Virtual Insanity" and I'm
+  sure I would never have heard this album without that amazing promo clip. That
+  said, this is a funky, highly enjoyable affair that is more than a little
+  derivative of **Stevie Wonder**. Much like the master it has patterned itself
+  after, what we get here is a pleasant mix of funky upbeat tunes, and pretty
+  soulful ballads. [*Memory*: This makes me think of a quant music "format" that
+  I collected in the late 90s. CDs were expensive (and in some cases, evil in
+  the religion I was raised in) and I couldn't always acquire the latest tunes I
+  liked from TV or radio. The internet of the late 90s provided me an
+  approximate solution, the MIDI file. I downloaded the minimalist, instrumental
+  sequencer versions of popular tunes that I didn't have for real. I remember
+  downloading a particularly impressive version of "Virtual Insanity" in the
+  (new at the time) XG MIDI format. It didn't have the vocal track, but I could
+  still enjoy that funky groove.]
+
+- *Better Can't Make Your Life Better* by **Lilys** - I love **The Kinks** and
+  so apparently does Kurt Heasley, the man behind **Lilys**. This feels like a
+  love letter to the pre "Village Green" **Kinks** and it is expertly done. The
+  90s were a time of significant interest in the sounds of the mid 60s, and this
+  is a expert recreation and modernization of the garage rock sound. [*Memory*:
+  There was a vinyl copy of this at one of my favorite Rochester shops (The Bop
+  Shop) for probably about 5 years before I finally pulled the trigger and
+  picked it up. Why was I delaying, this is wonderful stuff!]
+
+- *Everything Must Go* by **Manic Street Preachers** - These guys were always
+  one of the heavier BritPop acts, but this is where the balladry and pop
+  sensibility started to really creep in. That said, it totally works. A really
+  polished and literate set of tracks that never get old. The epic "Elvis
+  Impersonator..." returns to one of their favorite topics, the relationships
+  between the UK and America. Admittedly their frank consideration of that topic
+  is why they never really made it over here, and why I didn't hear anything
+  from them until the mid 2000s. I would have absolutely loved it back then, and
+  I certainly do now! [*Memory*: "A Design for Life" is the ultimate BritPop
+  anthem. It was made to be screamed along with by a Glastonbury festival crowd.
+  I got a noise violation letter for jamming it too loud at in my State College
+  apartment in 2007.]
+
+- *Older* by **George Michael** - This album sold millions of copies, but not as
+  many millions of the two prior, and therefore was perceived as a failure at
+  the time. Today it sounds like a revelation. A sophisticated, mature affair
+  with some of his best songwriting and vocal performances, this was not fully
+  appreciated at release. "Jesus to a Child" is a remarkable song, perhaps his
+  very finest. Everything has such a warm, atmospheric vibe. Maybe the best 90s
+  sophista-pop record. [*Memory*: I certainly remember the singles from this
+  record getting played (especially on VH1), and had them on a greatest hits
+  compilation, but I didn't listen to the whole album until 2021. After reading
+  a biography on the artist I streamed all the records and was blown away by
+  this one.]
+
+- *Who Can you Trust* by **Morcheeba** - The big breakout for these guys, and a
+  wonderful evolution of trip-hop. The kind of smooth and elegant record that
+  you could replay to infinity and not tire of. It is almost like
+  **Portishead** has been polished up and made TV commercial ready, but somehow
+  still very compelling. [*Memory*: Early in the 2020 pandemic year, I made an
+  effort to listen through to albums I acquired in the CD era and had forgot
+  about. I rediscovered this brilliant LP though that process.]
+
+- *Dusk at Cubist Castle* by **The Olivia Tremor Control** - I like the pop
+  songs on this record quite a bit, but the ambient, instrumental parts just
+  don't work as well as the ones on the next (and final) record. No denying how
+  influential everything about this would be on a whole generation of psych rock
+  revivalists. [*Memory*: These guys always remind me of my move to Rochester,
+  NY. I was very into them around that time, and they would also reissue all
+  their records on vinyl around that time.]
+
+- *In Sides* by **Orbital** - The definitive album oriented techno record. They
+  always liked to work in longer forms, but this whole album is built around
+  10-20 minute chunks of music. I'm always going back and forth between this and
+  the brown album as my favorite, but without question "Out There Somewhere" is
+  there absolute best moment. Techno in general hasn't aged well, but this still
+  sounds amazing today. I really love the way they mix in real instruments with
+  all the electronics here. It gives a texture that a lot of the electronic
+  music of the day did  not have [*Memory*: One of my favorite things to play on
+  a run, it is hard to not think about exercise when I hear this record.]
+
+- *No Code* by **Pearl Jam** - This has always been my favorite of their albums,
+  and I feel like the world has caught up with me. The stripped back garage
+  mentality suits them well, and captures their live nature better than any of
+  their other work. Short, hard-hitting songs that avoid the extended bombast
+  that they sometimes tend to fall into. They also mix in one of their sweetest
+  balads in "Off He Goes", and the greatest **Pearl Jam** song not sung by Eddie
+  Vedder in "Mankind". [*Memory*: I bought a used copy of this at a secondhand
+  store called Cash Converters around 1999. I payed a dollar for it, showing how
+  unappreciated it was at the time. I later payed almost 40 bucks for the vinyl
+  reissue, and many others were happy to do so as well.]
+
+- *New Adventures in Hi-Fi* by **R.E.M.** - A clear attempt to return to a more
+  arty, low-key sound after the straightforward rock of **Monster**. This was
+  very under the radar at the time, but many people (including myself) learned
+  to appreciate this over time. [*Memory*: I bought my CD copy of this record
+  when I was working as a summer intern at NASA Glenn in the summer of 2023.
+  There was a message board where you could post things for sale, and I bought
+  this from someone along with **Hum**'s *You'd Prefer an Astronaut*.]
+
+- *Down on the Upside* by **Soundgarden** - In my opinion, this is a highly
+  underrated follow-up to their breakout hit *Superunknown*. A return to more
+  conventional hard rock, with some elements of the singer-songwriter fare that
+  would dominate the early **Chris Cornell** solo career. This would have been a
+  great way for them to wrap up, except for the ill advised reunion in the
+  2010s. [*Memory*: "Blow Up the Outside World" was one of the very first MP3s I
+  downloaded from the internet. Weirdly I downloaded it from the FTP server
+  ran by a fellow student who I didn't really care for at my high school. "Free"
+  music conquers all barriers.]
+
+- *Emperor Tomato Ketchup* by **Stereolab** - 90s indie was wildly diverse and
+  often hard to categorize, and this might be the definitive album of the era.
+  Electronic tinged rock music with a Krautrock groove and a pop soul, there is
+  a little bit of everything here. This was the doorway to so many places for
+  me: **Can**, **Kraftwerk**, **Bell and Sebastian**, **Of Montreal**, and who
+  knows what else. [*Memory*: Maybe the most important record I sought out
+  because of the AllMusicGuide genre summaries. They considered this an indie
+  landmark, and that isn't putting it strongly enough.]
+
+- *Tiny Music...* by **Stone Temple Pilots** - Much like *No Code* (above), I
+  feel ahead of the times picking this record out as this band's finest hour.
+  The combination of garage, psychedelia, and glam on offer here is a very
+  unique and memorable sound from a group that was often dismissed as
+  derivative. Here they sound very much ahead of the times, and almost sound a
+  little prophetic of the indie rock that would dominate the turn of the
+  millennium. [*Memory*: When I look at the cover of this record, I can't help
+  but picture the Columbia House music club mailers and magazine adds that
+  seemed to feature this album for the better part of 1996-97.]
+
+- *Millions Now Living will Never Die* - This may be the definitive post rock
+  record. A straight up fusion of punk and jazz, this sound has been attempted
+  so many times, but very rarely this well. I sometimes wonder if these guys are
+  why I grew up to like jazz (particularly electro-jazz) so much. [*Memory*: The
+  name of this album has always fascinated me, since it is titled after the
+  greatest lie ever told by the religion I was raised in. I wonder how that came
+  to be?]
 
 1997
 ----
